[package]
name = "md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
ctrlc = "3.2.5"
flate2 = "1.0.25"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.7.0"
thread_local = "1.1.7"

[profile.release]
lto = true         # Link-time optimization
codegen-units = 1  # Slower compilation but faster code
